k8s/k8s-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomato-api
  namespace: tomato-api-ns
  labels:
    app: tomato-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomato-api
  template:
    metadata:
      labels:
        app: tomato-api
    spec:
      terminationGracePeriodSeconds: 31
      containers:
      - name: tomato-api
        image: asia.gcr.io/able-stock-380702/tomato-api:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8765
          name: web-port
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: 8765
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /health
            port: 8765
            scheme: HTTP
      # volumes:
      #   - name: volumn-config
      #     configMap:
      #       name: api-config
